Fixed transitions, modal was visible on load in some cases

--- a/gpaste/paste/static/styles/css/main.css
+++ b/gpaste/paste/static/styles/css/main.css
@@ -231,9 +231,9 @@ select {
   z-index: 1000;
   opacity: 0;
   background: rgba(0, 0, 0, 0.8);
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s; }
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  -moz-transition: opacity 0.3s -moz-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s; }
 
 .md-show.md-overlay {
   opacity: 1;
@@ -248,9 +248,9 @@ select {
   -ms-transform: scale(0.7);
   transform: scale(0.7);
   opacity: 0;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s; }
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s; }
 
 .md-show.modal-effect .modal-content {
   -webkit-transform: scale(1);
